# literal-flake-input

./: .gitignore  README.md  changelog.md  flake.nix  literal-flake-input.cabal  literal-flake-input.cabal.template
app/: EncodeInputUrl.hs  LiteralFlakeInput.hs
assets/: robots.txt  sitemap.xml
nixos/: flake-lfi.nix  non-flake-lfi.nix
src/LiteralFlakeInput/: App.hs  CmdArgs.hs  CmdRun.hs  Nix.hs  Page.hs  Prelude.hs  UrlEncoder.hs
stress/: api-dyn.xml  api-prod.xml  api.xml  http_scenario  landing.xml  launch.sh
test/: Driver.hs
test/LiteralFlakeInput/Test/: Nix.hs
